[project]
name = "dicergirl"
version = "4.0.0-beta.2"
description = "新一代跨平台开源 TRPG 骰娘框架"
authors = [
    {name = "苏向夜", email = "fu050409@163.com"},
]
dependencies = [
    "infini>=2.1.0",
    "nonebot2>=2.2.1",
    "diceutils>=0.3.0.post1",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://gitee.com/unvisitor/dicer"
"Bug Tracker" = "https://gitee.com/unvisitor/dicer/issues"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
]
